chore(*): adjust menu and system prompt

--- a/app/views/works/discussions/index.html.erb
+++ b/app/views/works/discussions/index.html.erb
@@ -17,18 +17,18 @@
             <form class="mt-2" data-action="thinking-models#submit">
               <div class="mb-2 flex gap-x-2 overflow-x-auto whitespace-nowrap text-xs text-slate-600 dark:text-slate-300 sm:text-sm">
                 <div class="flex items-center space-x-4">
-                  <div>
-                    <input type="checkbox" id="first-principle-thinking" value="第一性原理" class="hidden peer" data-thinking-models-target="model">
-                    <label for="first-principle-thinking" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
-                      第一性原理
-                    </label>
-                  </div>
-                  <div>
-                    <input type="checkbox" id="kano-model" value="卡诺模型" class="hidden peer" data-thinking-models-target="model">
-                    <label for="kano-model" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
-                      卡诺模型分析
-                    </label>
-                  </div>
+<!--                  <div>-->
+<!--                    <input type="checkbox" id="first-principle-thinking" value="第一性原理" class="hidden peer" data-thinking-models-target="model">-->
+<!--                    <label for="first-principle-thinking" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">-->
+<!--                      第一性原理-->
+<!--                    </label>-->
+<!--                  </div>-->
+<!--                  <div>-->
+<!--                    <input type="checkbox" id="kano-model" value="卡诺模型" class="hidden peer" data-thinking-models-target="model">-->
+<!--                    <label for="kano-model" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">-->
+<!--                      卡诺模型分析-->
+<!--                    </label>-->
+<!--                  </div>-->
                 </div>
               </div>
               <label for="chat-input" class="sr-only">请描述你遇到的产品问题</label>
