--- a/app/views/works/_product_menu.html.erb
+++ b/app/views/works/_product_menu.html.erb
@@ -99,7 +99,25 @@
         <li>
           <ul role="list" class="-mx-2 space-y-1">
             <li>
-              <a href="<%= works_product_user_journey_maps_path %>" class="<%= current_page?(works_product_user_journey_maps_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+              <a href="<%= works_products_path %>" class="text-gray-400 hover:text-white hover:bg-gray-800 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
+                </svg>
+                返回
+              </a>
+            </li>
+            <li>
+              <% ujm_paths = [] %>
+              <% if @product %>
+                <% ujm_paths = [
+                  works_product_user_journey_maps_path(@product),
+                  new_works_product_user_journey_map_path(@product)
+                ] %>
+                <% if @product.user_journey_maps.exists? %>
+                  <% ujm_paths << works_product_user_journey_map_path(@product, @product.user_journey_maps.first) %>
+                <% end %>
+              <% end %>
+              <a href="<%= works_product_user_journey_maps_path %>" class="<%= ujm_paths.any? { |path| current_page?(path) } ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
