--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= render 'chat/sidebar_menu' %>
+  <%= render 'works/parent_menu' %>
 
   <main class="py-10 lg:pl-72">
     <div class="overflow-hidden rounded-lg bg-white shadow">
