--- a/app/views/works/user_interview_questions/new.html.erb
+++ b/app/views/works/user_interview_questions/new.html.erb
@@ -21,8 +21,7 @@
                 </div>
               </div>
               <div class="border-b border-gray-900/10 pb-12">
-                <p class="mt-1 text-sm leading-6 text-gray-400">汪汪会努力为你分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
-
+                <h2 class="text-base font-semibold leading-7 text-gray-900">访谈问题列表</h2>
                 <div class="mt-2 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                   <div class="sm:col-span-6">
                     <div class="mt-2">
