--- a/app/views/works/_product_menu.html.erb
+++ b/app/views/works/_product_menu.html.erb
@@ -1,3 +1,14 @@
+<% ujm_paths = [] %>
+<% if @product %>
+  <% ujm_paths = [
+    works_product_user_journey_maps_path(@product),
+    new_works_product_user_journey_map_path(@product)
+  ] %>
+  <% if @product.user_journey_maps.exists? %>
+    <% ujm_paths << works_product_user_journey_map_path(@product, @product.user_journey_maps.first) %>
+  <% end %>
+<% end %>
+
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
 <div class="relative z-50 lg:hidden" role="dialog" aria-modal="true">
   <!--
@@ -51,7 +62,7 @@
         <nav class="flex flex-1 flex-col">
           <ul role="list" class="flex flex-1 flex-col gap-y-7">
             <li>
-              <a href="<%= switch_view_path %>" class="<%= current_page?(switch_view_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+              <a href="<%= works_product_user_journey_maps_path %>" class="<%= ujm_paths.any? { |path| current_page?(path) } ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
@@ -60,7 +71,7 @@
               </a>
             </li>
             <li>
-              <a href="<%= user_interview_questions_path %>" class="<%= current_page?(user_interview_questions_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+              <a href="<%= new_works_product_user_interview_question_path %>" class="<%= current_page?(new_works_product_user_interview_question_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
                 </svg>
@@ -107,16 +118,6 @@
               </a>
             </li>
             <li>
-              <% ujm_paths = [] %>
-              <% if @product %>
-                <% ujm_paths = [
-                  works_product_user_journey_maps_path(@product),
-                  new_works_product_user_journey_map_path(@product)
-                ] %>
-                <% if @product.user_journey_maps.exists? %>
-                  <% ujm_paths << works_product_user_journey_map_path(@product, @product.user_journey_maps.first) %>
-                <% end %>
-              <% end %>
               <a href="<%= works_product_user_journey_maps_path %>" class="<%= ujm_paths.any? { |path| current_page?(path) } ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
