--- a/app/views/works/discussions/show.html.erb
+++ b/app/views/works/discussions/show.html.erb
@@ -6,7 +6,7 @@
         <div class="px-4 sm:px-6 lg:px-8">
           <div class="md:flex md:items-center md:justify-between">
             <div class="min-w-0 flex-1">
-              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">思维模型拆解问题</h2>
+              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">通过思维模型分析产品问题</h2>
             </div>
           </div>
 
