--- a/app/views/works/questionnaires/index.html.erb
+++ b/app/views/works/questionnaires/index.html.erb
@@ -29,7 +29,7 @@
                     <tbody class="divide-y divide-gray-200">
                     <% @questionnaires.each do |questionnaire| %>
                       <tr>
-                        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= questionnaire.name %></td>
+                        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= questionnaire.title %></td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= questionnaire.target_user %></td>
                         <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
                           <%= link_to '查看', works_questionnaire_path(questionnaire), class: 'text-indigo-600 hover:text-indigo-900' %>
