feat(questionnaires): implement views and function calling

--- a/app/views/works/questionnaires/index.html.erb
+++ b/app/views/works/questionnaires/index.html.erb
@@ -32,7 +32,7 @@
                         <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0"><%= questionnaire.title %></td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= questionnaire.target_user %></td>
                         <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-                          <%= link_to '查看', works_questionnaire_path(questionnaire), class: 'text-indigo-600 hover:text-indigo-900' %>
+                          <%= link_to '编辑', edit_works_questionnaire_path(questionnaire), class: 'text-indigo-600 hover:text-indigo-900' %>
                         </td>
                       </tr>
                     <% end %>
