--- a/app/views/works/questionnaires/edit.html.erb
+++ b/app/views/works/questionnaires/edit.html.erb
@@ -35,10 +35,9 @@
                   <!-- Active: "border-indigo-600 ring-2 ring-indigo-600", Not Active: "border-gray-300" -->
                   <label
                     class="relative block cursor-pointer rounded-lg border bg-white px-6 py-4 shadow-sm focus:outline-none sm:flex sm:justify-between"
-                    data-action="click->radio#select"
                     data-radio-target="label"
                   >
-                    <input  data-radio-target="input" type="radio" name="server-size" value="Hobby" class="sr-only" aria-labelledby="server-size-0-label" aria-describedby="server-size-0-description-0 server-size-0-description-1">
+                    <input data-action="click->radio#select" data-radio-target="input" type="radio" name="server-size" value="Hobby" class="sr-only" aria-labelledby="server-size-0-label" aria-describedby="server-size-0-description-0 server-size-0-description-1">
                     <%= q_form.text_area :content, rows: 2, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" %>
                     <!--
                       Active: "border", Not Active: "border-2"
