--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,30 @@
         posthog.init('phc_soHD2sYnBrikVcEloJJxMJUhYyXirgR5QKU2P3khZtj',{api_host:'https://us.i.posthog.com', person_profiles: 'identified_only' // or 'always' to create profiles for anonymous users as well
         })
     </script>
+    <!-- OpenReplay Tracking Code -->
+    <script>
+        var initOpts = {
+            projectKey: "xc1JPiZJoO4sKmlbWHQp",
+            defaultInputMode: 2,
+            obscureTextNumbers: false,
+            obscureTextEmails: true,
+        };
+        var startOpts = { userID: "" };
+        (function(A,s,a,y,e,r){
+            r=window.OpenReplay=[e,r,y,[s-1, e]];
+            s=document.createElement('script');s.src=A;s.async=!a;
+            document.getElementsByTagName('head')[0].appendChild(s);
+            r.start=function(v){r.push([0])};
+            r.stop=function(v){r.push([1])};
+            r.setUserID=function(id){r.push([2,id])};
+            r.setUserAnonymousID=function(id){r.push([3,id])};
+            r.setMetadata=function(k,v){r.push([4,k,v])};
+            r.event=function(k,p,i){r.push([5,k,p,i])};
+            r.issue=function(k,p){r.push([6,k,p])};
+            r.isActive=function(){return false};
+            r.getSessionToken=function(){};
+        })("//static.openreplay.com/latest/openreplay.js",1,0,initOpts,startOpts);
+    </script>
   </head>
 
   <body class="h-full">
