--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,43 +17,13 @@
       rel="stylesheet"
       />
     <!-- Include the Swiper library -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcdn.net/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
     <!--  TODO: importmap  html2pdf -->
     <!--  lock version 0.9.3 -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <%= javascript_importmap_tags %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
-
-    <script>
-        !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys getNextSurveyStep onSessionId setPersonProperties".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
-        posthog.init('phc_soHD2sYnBrikVcEloJJxMJUhYyXirgR5QKU2P3khZtj',{api_host:'https://us.i.posthog.com', person_profiles: 'identified_only' // or 'always' to create profiles for anonymous users as well
-        })
-    </script>
-    <!-- OpenReplay Tracking Code -->
-    <script>
-        var initOpts = {
-            projectKey: "xc1JPiZJoO4sKmlbWHQp",
-            defaultInputMode: 2,
-            obscureTextNumbers: false,
-            obscureTextEmails: true,
-        };
-        var startOpts = { userID: "" };
-        (function(A,s,a,y,e,r){
-            r=window.OpenReplay=[e,r,y,[s-1, e]];
-            s=document.createElement('script');s.src=A;s.async=!a;
-            document.getElementsByTagName('head')[0].appendChild(s);
-            r.start=function(v){r.push([0])};
-            r.stop=function(v){r.push([1])};
-            r.setUserID=function(id){r.push([2,id])};
-            r.setUserAnonymousID=function(id){r.push([3,id])};
-            r.setMetadata=function(k,v){r.push([4,k,v])};
-            r.event=function(k,p,i){r.push([5,k,p,i])};
-            r.issue=function(k,p){r.push([6,k,p])};
-            r.isActive=function(){return false};
-            r.getSessionToken=function(){};
-        })("//static.openreplay.com/latest/openreplay.js",1,0,initOpts,startOpts);
-    </script>
   </head>
 
   <body class="h-full">
